--- a/code/portfolio/css/mobile-styles.css
+++ b/code/portfolio/css/mobile-styles.css
@@ -1,26 +1,26 @@
 /* Mobile Styles */
 
-
-/*
-1. Align the nav link items to the right of the screen
-2. Add whitespace around the nav links
-3. Create a "Hero" component
-4. Add your name and little description about you to the Hero
-5. Add a button that will eventually link to your contact form
-6. Using MDN: Import normalize.css (google it) via the css stylesheet
-*/
-
+@import url('/css/normalize.css');
 * {
     margin: 0;
+}
+
+body {
+    border: wheat solid 1px;
 }
 
 nav {
     display: flex;
     justify-content: flex-end;
+    border: white solid 10px;
 }
 
 nav .nav-link {
     margin-right: 16px;
+    color: red;
+    border: yellow solid 1px;
+    border-radius: 75px;
+    background-color: wheat;
 }
 
 nav .nav-link:last-of-type {
@@ -28,12 +28,12 @@ nav .nav-link:last-of-type {
 }
 
 .hero {
-    background: url('https://www.nps.gov/yose/planyourvisit/images/GlacierPointSilhouette-JZamudio-web.jpg?maxwidth=1200&maxheight=1200&autorotate=false');
+    background: url(https://www.lonestar.edu/departments/webservices/program_architecturalDesign.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
-    color: white;
-    min-height: 33vh;
+    color: yellow;
+    min-height: 50vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -41,11 +41,13 @@ nav .nav-link:last-of-type {
 }
 
 .button {
-    color: white;
-    background: dodgerblue;
-    padding: 8px;
-    border-radius: 4px;
+    color: blue;
+    background: yellow;
+    text-align: center;
+    max-width: 100px;
+    padding: 10px;
+    border-radius: 20px;
     text-decoration: none;
-    margin-top: 16px;
+    margin-top: 0px;
     display: inherit;
 }
